<resources>
    <string name="app_name">Mobilcsmag előfizetés</string>
    <string name="name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login_button">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="back">Mégsem</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="emailAddress">Email cím</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="bejelentkezes_google_lel">Bejelentkezés Google-lel</string>
    <string name="regisztraci_google_lel">Regisztráció Google-lel</string>
    <string name="fioknelkulezelodom">Fiók nélkül nézelődöm</string>
    <string name="default_web_client_id">169274008142-ina4jak3h8h1t3sfal3ftm670l3j936s.apps.googleusercontent.com</string>
    <string name="recaptcha_site_key">6Ld2jAErAAAAAJvEDyEFNkofShxoXPJU-1brUCq6</string>
    <string name="spinner_prompt">Típus szűrése</string>
</resources>