<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Register">

        <TextView
            android:id="@+id/Regisztráció"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="74dp"
            android:text="Regisztráció" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailAddress"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:autofillHints=""
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextNewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:importantForAutofill="noExcludeDescendants"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:autofillHints=""
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:importantForAutofill="noExcludeDescendants"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/editTextPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordAgain"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:importantForAutofill="noExcludeDescendants"
            tools:layout_editor_absoluteX="-16dp" />

        <CheckBox
            android:id="@+id/checkBoxAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Admin fiók létrehozása" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backToLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="back"
                android:text="@string/back"
                app:layout_constraintVertical_bias="0.091" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="register"
                android:text="@string/register"
                app:layout_constraintVertical_bias="0.091" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>